.bg z-index fix

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ a:hover {
   background-color: #333;
 }
 
-html.dark,
 html.dark body {
   color: #fff;
   background-color: #212121;
@@ -55,7 +54,6 @@ html.dark a:hover {
 
 @media (max-width: 769px) {
   body {
-    max-width: 100vw;
     font-size: 13px;
     margin: 30px;
   }
